[feat] add logo to footer
I add publisher logo to footer

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -1,6 +1,6 @@
 ruby:
   link_to_dresses = build_taxon_path('dresses')
-  
+
 
 .page-content.index
   // TODO: create helper for multisource images
@@ -12,21 +12,21 @@ section.carousel-strap.instagram
     .outer-wrap
       h2.title-line-on-sides
         .inner-wrap SHOP INSTAGRAM
-      = react_component('InstagramCarousel', skin: '', 
-        assets: [{link: link_to_dresses + '/dress-sienna-656?color=black', src: '/assets/homepage/instagram/No4_micah.jpg', user: '@micahgianneli', cta: "Shop Micah's Look"}, 
-                  {link: link_to_dresses + '/dress-midnight-ryder-648?color=black', src: '/assets/homepage/instagram/No10_Rozalia.jpg', user: '@rozalia_russian', cta: "Shop Rozalia's Look"}, 
-                  {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No12_Nada.jpg', user: '@nadaadellex', cta: "Shop Nada's Look"}, 
-                  {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No2_Sjana.jpg', user: '@sjanaelise', cta: "Shop Sjana's Look"}, 
-                  {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No1_Marzia.jpg', user: '@itsmarziapie', cta: "Shop Marzia's Look"}, 
-                  {link: link_to_dresses + '/dress-mira-two-piece-586?color=cobalt-blue', src: '/assets/homepage/instagram/No3_janni.jpg', user: '@jannid', cta: "Shop Janni's Look"}, 
-                  {link: link_to_dresses + '/dress-first-in-line-467?color=mint', src: '/assets/homepage/instagram/No5_Jen.jpg', user: '@frmheadtotoe', cta: "Shop Jen's Look"}, 
-                  {link: link_to_dresses + '/dress-gypsy-crown-624?color=gold', src: '/assets/homepage/instagram/No6_Nyane.jpg', user: '@nyanelebajoa', cta: "Shop Nyane's Look"}, 
-                  {link: link_to_dresses + '/dress-mesh-debutante-516?color=black', src: '/assets/homepage/instagram/No7_Walkin.jpg', user: '@walkinwonderland', cta: "Shop this Look"}, 
-                  {link: link_to_dresses + '/dress-elegant-angel-508?color=black', src: '/assets/homepage/instagram/No8_Not_Jess.jpg', user: '@notjessfashion', cta: "Shop this Look"}, 
-                  {link: link_to_dresses + '/dress-elle-455?color=black', src: '/assets/homepage/instagram/No9_Chayenne.jpg', user: '@cheyennet', cta: "Shop Cheyenne's Look"}, 
-                  {link: link_to_dresses + '/dress-azalea-floral-two-piece-479?color=pink-azalea-floral', src: '/assets/homepage/instagram/No11_Allie.jpg', user: '@alliemarieevans', cta: "Shop Allie's Look"}, 
-                  {link: link_to_dresses + '/dress-lace-genie-649?color=black', src: '/assets/homepage/instagram/No13_Yan.jpg', user: '@yanyanchan', cta: "Shop Yan's Look"}, 
-                  {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No14_Kirsten.jpg', user: '@kirstenzellers', cta: "Shop Kirsten's Look"}, 
+      = react_component('InstagramCarousel', skin: '',
+        assets: [{link: link_to_dresses + '/dress-sienna-656?color=black', src: '/assets/homepage/instagram/No4_micah.jpg', user: '@micahgianneli', cta: "Shop Micah's Look"},
+                  {link: link_to_dresses + '/dress-midnight-ryder-648?color=black', src: '/assets/homepage/instagram/No10_Rozalia.jpg', user: '@rozalia_russian', cta: "Shop Rozalia's Look"},
+                  {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No12_Nada.jpg', user: '@nadaadellex', cta: "Shop Nada's Look"},
+                  {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No2_Sjana.jpg', user: '@sjanaelise', cta: "Shop Sjana's Look"},
+                  {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No1_Marzia.jpg', user: '@itsmarziapie', cta: "Shop Marzia's Look"},
+                  {link: link_to_dresses + '/dress-mira-two-piece-586?color=cobalt-blue', src: '/assets/homepage/instagram/No3_janni.jpg', user: '@jannid', cta: "Shop Janni's Look"},
+                  {link: link_to_dresses + '/dress-first-in-line-467?color=mint', src: '/assets/homepage/instagram/No5_Jen.jpg', user: '@frmheadtotoe', cta: "Shop Jen's Look"},
+                  {link: link_to_dresses + '/dress-gypsy-crown-624?color=gold', src: '/assets/homepage/instagram/No6_Nyane.jpg', user: '@nyanelebajoa', cta: "Shop Nyane's Look"},
+                  {link: link_to_dresses + '/dress-mesh-debutante-516?color=black', src: '/assets/homepage/instagram/No7_Walkin.jpg', user: '@walkinwonderland', cta: "Shop this Look"},
+                  {link: link_to_dresses + '/dress-elegant-angel-508?color=black', src: '/assets/homepage/instagram/No8_Not_Jess.jpg', user: '@notjessfashion', cta: "Shop this Look"},
+                  {link: link_to_dresses + '/dress-elle-455?color=black', src: '/assets/homepage/instagram/No9_Chayenne.jpg', user: '@cheyennet', cta: "Shop Cheyenne's Look"},
+                  {link: link_to_dresses + '/dress-azalea-floral-two-piece-479?color=pink-azalea-floral', src: '/assets/homepage/instagram/No11_Allie.jpg', user: '@alliemarieevans', cta: "Shop Allie's Look"},
+                  {link: link_to_dresses + '/dress-lace-genie-649?color=black', src: '/assets/homepage/instagram/No13_Yan.jpg', user: '@yanyanchan', cta: "Shop Yan's Look"},
+                  {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No14_Kirsten.jpg', user: '@kirstenzellers', cta: "Shop Kirsten's Look"},
                   {link: link_to_dresses + '/dress-laced-heartline-262?color=black', src: '/assets/homepage/instagram/No15_kristy.jpg', user: '@kristyjgreen', cta: "Shop Kristy's Look"}])
 
 /! Content Section
@@ -45,6 +45,20 @@ section.container.content-block.home-main-content
 
     aside.col-md-5
       = react_component('BlogPosts')
+  .row.as-seen-in
+    hr
+    .as-seen-in-text AS SEEN IN
+  .row.as-seen-in-partners
+    img.refinery29 src='assets/footer/publisher/refinery29.png'
+    img.elle src='assets/footer/publisher/elle.png'
+    img.marie src='assets/footer/publisher/marie.png'
+    img.russh src='assets/footer/publisher/russh.png'
+    img.glamour src='assets/footer/publisher/glamour.png'
+    img.wwd src='assets/footer/publisher/wwd.png'
+    img.teen src='assets/footer/publisher/teen.png'
+    img.popsugar src='assets/footer/publisher/popsugar.png'
+    img.nylon src='assets/footer/publisher/nylon.png'
+    img.cosmo src='assets/footer/publisher/cosmo.png'
 
 /! Email Subscription
 = render 'shared/redesign/newsletter_signup'
