[bugfix] fix value proposition message
I fix value proposition message

--- a/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
@@ -88,9 +88,9 @@ ruby:
     = @order.try(:number)
 
   .shopping-bag-text-wrapper
-    .row.shopping-bag-text
-      = raw shopping_bag_texts.shipping_message
-
+    - if !shopping_bag_texts.shipping_message.blank?
+      .row.shopping-bag-text
+        = raw shopping_bag_texts.shipping_message
     .row.shopping-bag-text
       = raw shopping_bag_texts.value_proposition
 
