--- a/app/assets/stylesheets/redesign/_checkout.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout.css.scss
@@ -234,7 +234,9 @@ $order-summary-bg: #f7f7f9;
     .shopping-bag-text{
       margin-right:0;
       padding-top:10px;
-      padding-left:35px
+      padding-left:35px;
+      height:110px;
+      font-size: 1.5rem;
     }
     .shopping-bag-text span{
       float: left;
