--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -8013,7 +8013,9 @@ xheader
 #cart .shopping-bag-text{
   margin-right:0;
   padding-top:10px;
-  padding-left:35px
+  padding-left:35px;
+  height: 110px;
+  font-size: 1.5rem;
 }
 #cart .shopping-bag-text span{
   float: left;
