--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -49,16 +49,16 @@ section.container.content-block.home-main-content
     hr
     .as-seen-in-text AS SEEN IN
   .row.as-seen-in-partners
-    img.refinery29 src='assets/footer/publisher/refinery29.png'
-    img.elle src='assets/footer/publisher/elle.png'
-    img.marie src='assets/footer/publisher/marie.png'
-    img.russh src='assets/footer/publisher/russh.png'
-    img.glamour src='assets/footer/publisher/glamour.png'
-    img.wwd src='assets/footer/publisher/wwd.png'
-    img.teen src='assets/footer/publisher/teen.png'
-    img.popsugar src='assets/footer/publisher/popsugar.png'
-    img.nylon src='assets/footer/publisher/nylon.png'
-    img.cosmo src='assets/footer/publisher/cosmo.png'
+    img.refinery29 alt='Refinery29'    src='/assets/footer/publisher/refinery29.png'
+    img.elle       alt='Elle'          src='/assets/footer/publisher/elle.png'
+    img.marie      alt='Marie'         src='/assets/footer/publisher/marie.png'
+    img.russh      alt='Russh'         src='/assets/footer/publisher/russh.png'
+    img.glamour    alt='Glamour'       src='/assets/footer/publisher/glamour.png'
+    img.wwd        alt='WWD'           src='/assets/footer/publisher/wwd.png'
+    img.teen       alt='Teenvogue'     src='/assets/footer/publisher/teen.png'
+    img.popsugar   alt='Popsugar'      src='/assets/footer/publisher/popsugar.png'
+    img.nylon      alt='Nylon'         src='/assets/footer/publisher/nylon.png'
+    img.cosmo      alit='Cosmopolitan' src='/assets/footer/publisher/cosmo.png'
 
 /! Email Subscription
 = render 'shared/redesign/newsletter_signup'
