Change the right lookbook code

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -108,7 +108,7 @@ ruby:
 
 .row.rect#rect-lookbook.nav-menu-wrap.menu-lookbook
   .slider-wrap
-    = react_component('MenuLookbook', skin: 'skin-light', assets: [{link: make_a_statement_collection_path, src: '/assets/homepage/lookbook/1.jpg', title: 'BAMBI X FAME'}, {link: photo_finish_collection_path, src: '/assets/homepage/lookbook/2.jpg', title: 'PHOTO FINISH'}, {link: luxe_collection_path, src: '/assets/homepage/lookbook/3.jpg', title: 'THE LUXE COLLECTION'}])
+    = react_component('MenuLookbook', skin: 'skin-light', assets: [{link: make_a_statement_collection_path, src: '/assets/homepage/lookbook/1.jpg', title: 'BAMBI X FAME'}, {link: dance_hall_days_collection_path, src: '/assets/homepage/lookbook/dance-hall-days.jpg', title: 'DANCE HALL DAYS'},{link: photo_finish_collection_path, src: '/assets/homepage/lookbook/2.jpg', title: 'PHOTO FINISH'}])
 
 /!
   .row.rect#rect-magazine.nav-menu-wrap.menu-magazine
