--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -5,7 +5,7 @@ ruby:
 .page-content.index
   // TODO: create helper for multisource images
   = react_component('HeroCarousel', skin: 'skin-light', 
-    assets: [{link: build_taxon_path('Formal'), src: '/assets/home-page-tiles/hero-1', alt: 'Why so formal? - Shop all formal dresses'}, {link: lookbook_path + '/photo-finish', src: '/assets/home-page-tiles/hero-2', alt: 'Photo FINISH - Shop Now'}, {link: lookbook_path + '/make-a-statement', src: '/assets/home-page-tiles/hero-3', alt: 'Bambi - Shop the Collection'}])
+    assets: [{link: lookbook_path + '/dance-hall-days', src: '/assets/home-page-tiles/hero-4', alt: 'The elusive Miss Ellen - Shop the Collection'}, {link: lookbook_path + '/photo-finish', src: '/assets/home-page-tiles/hero-2', alt: 'Photo FINISH - Shop Now'}, {link: lookbook_path + '/make-a-statement', src: '/assets/home-page-tiles/hero-3', alt: 'Bambi - Shop the Collection'}])
 
 section.carousel-strap.instagram
   .container
