updated mobile lookbook menu

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -221,18 +221,18 @@ ruby:
                       span bambi x fame.
                   .media-wrap
                     = image_tag 'homepage/lookbook/1.jpg'
+                = link_to dance_hall_days_collection_path
+                  .heading.alt
+                    .inner-wrap
+                      span dance hall days
+                  .media-wrap
+                    = image_tag 'homepage/lookbook/dance-hall-days.jpg'
                 = link_to photo_finish_collection_path
                   .heading.alt
                     .inner-wrap
                       span photo finish
                   .media-wrap
                     = image_tag 'homepage/lookbook/2.jpg'
-                = link_to luxe_collection_path
-                  .heading.alt
-                    .inner-wrap
-                      span the luxe collection
-                  .media-wrap
-                    = image_tag 'homepage/lookbook/3.jpg'
 
         div#magazine-menu
           ul.nav.navbar-nav
