Display skirt alert

--- a/app/assets/stylesheets/redesign/product/_product.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product.css.scss
@@ -96,6 +96,10 @@
     vertical-align: middle;
   }
 
+	.product-section-skirt-alert {
+		font-weight: normal;
+		margin-top: -10px;
+	}
 }
 
 #product-size, #product-color, #product-customizations {
