--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -93,6 +93,9 @@ ruby:
         .product-details-inner
           .row
             h1 = @product.name
+            - if @product.name.downcase.include?('skirt')
+              p.product-section-skirt-alert
+                | (Skirt Only)
             p.product-section-description
             p#product-price
               span.price = product_price_with_discount(@product.price, @product.discount)
