--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -381,7 +381,7 @@
       .tabs.vertical .tab-wrap {
         width: 100%;
         height: auto;
-        padding-bottom: 56.25%; // 16:9
+        padding-bottom: 78%;
       }
 
     }
