--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -78,10 +78,11 @@ ruby:
     center
       img.logo alt='mobilelogo' src='/assets/logo/logo-mobile.svg'
       .heading
-        .you YOU
-        | DESERVE
-        .vip VIP
-        | TREATMENT
+        span.you YOU
+        span.deserve DESERVE
+        br
+        span.vip VIP
+        span.treatment TREATMENT
       .mess
         .so-we-want SO WE WANT TO GIVE YOU
         .something SOMETHING SPECIAL.
