--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -181,9 +181,9 @@
         text-transform: none;
       }
       .tc{
-        font-size: 1rem;
+        font-size: 1.2rem;
         text-transform: none;
-        font-weight: 600;
+        font-weight: 500;
       }
       input{
         background-color: black;
@@ -194,6 +194,8 @@
         padding-right: 40px;
         margin-top: 10px;
         margin-bottom: 10px;
+        width: 170px;
+        cursor: pointer;
       }
       .four-lipsticks{
         img{
