--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -99,7 +99,12 @@ ruby:
         | Select* your <b>FREE</b> ModalCo gift <b>VALUED AT $24</b> & make your dress pop.
       input.checkout-btn value="CHECK OUT"
       .tc
-        | *If your selected colour in unavailable, we'll send you the closest colour match. While stocks last.
+        center
+          span
+            | *If your selected colour in unavailable, we'll send you the closest colour match.
+          br
+          span
+            | While stocks last.
 
 .slides-outer-wrapper
   .slides-inner-wrapper
