--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -98,7 +98,7 @@
       width: 37%;
       height: 463px;
       @media(max-width: 992px){
-        height: 420px;
+        height: 380px;
       }
       .heading{
         font-size: 3.5rem;
@@ -173,7 +173,7 @@
       height: 463px;
       background-color: white;
       @media(max-width: 992px){
-        height: 520px;
+        height: 500px;
       }
       .mess{
         font-size: 1.5rem;
@@ -182,8 +182,16 @@
       }
       .tc{
         font-size: 1.2rem;
-        text-transform: none;
+        span {
+          text-transform: none;
+        }
         font-weight: 500;
+        @media(min-width: 992px){
+          br {
+            display: none;
+          }
+        }
+        line-height:  20px;
       }
       input{
         background-color: black;
