--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -106,6 +106,18 @@
         li The decision of whether or not to honour a voucher or a promotional code is at Fame &amp; Partner's sole discretion. All decisions are final and binding.
 
 
+      h2 GIFT WITH PURCHASE
+      
+      ul
+        li We may from time to time promote a free gift with purchase.
+        li The free gift with purchase promotion applies only to new orders placed on our Site and fully paid after the date the free gift with purchase promotion is made available on the Site.
+        li You are limited to one free gift per order irrespective of the number of items purchased in your order.
+        li The free gift with purchase is available only while stocks last.
+        li We are under no obligation to advise you of the remaining number of free gifts available at any time.
+        li You may be sent an alternative colour choice in your free gift due to the unavailability of your original colour choice.
+        li The free gift with purchase cannot be redeemed, refunded or exchanged for cash or any other discount.
+        li We reserve the right to withdraw, modify, vary or terminate any free gift with purchase promotion at any time for any reason.
+
       h2 COPYRIGHT
 
       p Unless otherwise indicated, this Site and all content contained therein, including but not limited to text, photographs, images, icons, graphics, trademarks, trade names, logos and software ("Content"), is owned by the Company and protected by applicable law. You agree not to copy, publish, use, display, transmit, modify, transfer, sell, reformat, distribute, create derivative works from, or in any way exploit the Content without the Company's prior written approval. In addition, any mechanized or systematic processes for harvesting information from this Site for any purpose is prohibited. Nothing contained in or on this Site should be construed as granting any license or right, by implication or otherwise, to use any of the Content at any time.
