[bugfix] fix color
I fix color for suzi dress

--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -54,6 +54,7 @@ $product-color-hot-pink: #ff3399;
       .color-candy-pink              { background-color: #ff99ff; }
       .color-champagne               { background-color: #f0debb; }
       .color-charcoal                { background-color: #3c3c3c; }
+      .color-chartreuse              { background-color: #bed405; }
       .color-cheetah                 { background-image: url("product-collections/Cheetah.png"); }
       .color-cherry-red              { background-color: #ba0e0e; }
       .color-cobalt-blue             { background-color: #0000e5; }
