--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -36,6 +36,8 @@ $product-color-hot-pink: #ff3399;
       }
 
       .color-aqua                    { background-color: #21cddb; }
+      .color-apple-green             { background-color: #25d291; }
+      .color-apricot                 { background-color: #ffad80; }
       .color-baby-pink               { background-color: #fde2f0; }
       .color-beige                   { background-color: #efdecd; }
       .color-berry                   { background-color: #873c44; }
@@ -57,6 +59,7 @@ $product-color-hot-pink: #ff3399;
       .color-chartreuse              { background-color: #bed405; }
       .color-cheetah                 { background-image: url("product-collections/Cheetah.png"); }
       .color-cherry-red              { background-color: #ba0e0e; }
+      .color-chocolate               { background-color: #5a2b0c; }
       .color-cobalt-blue             { background-color: #0000e5; }
       .color-coral                   { background-color: #ff6262; }
       .color-cotton-candy            { background-color: #fbbfe9; }
@@ -67,12 +70,14 @@ $product-color-hot-pink: #ff3399;
       .color-emerald-green           { background-color: #1b9975; }
       .color-floral-dreamer          { @include image-color-selector('FloralDreamer.png'); }
       .color-fluoro-orange           { background-color: #ff9933; }
+      .color-forest-green            { background-color: #246b5b; }
       .color-fuschia                 { background-color: #ff77e8; }
       .color-garden-floral           { @include image-color-selector('GardenFloral.png'); }
       .color-geo-sage                { @include image-color-selector('GeoSage.png'); }
       .color-gold                    { background-color: #bf9541; }
-      .color-green                   { background-color: #00ff00; }
+      .color-green                   { background-color: #10a522; }
       .color-grey                    { background-color: #bcbebb; }
+      .color-gunmetal                { background-color: #444544; }
       .color-gypsy-queen             { @include image-color-selector('GypsyQueen.png'); }
       .color-gypsy-scarf             { @include image-color-selector('GypsyScarf.png'); }
       .color-hot-pink                { background-color: #ff3399; }
@@ -107,7 +112,7 @@ $product-color-hot-pink: #ff3399;
       .color-mint                    { background-color: #91ffdb; }
       .color-moss-green              { background-color: #8ea578; }
       .color-mushroom                { background-color: #d2bec4; }
-      .color-navy                    { background-color: #00004c; }
+      .color-navy                    { background-color: #1d2f6f; }
       .color-neon-mint               { background-color: #33ffc6; }
       .color-nude                    { background-color: #fdd5b1; }
       .color-off-white               { background-color: #fffef6; }
