--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -97,14 +97,14 @@
       background-color: #ebebeb;
       width: 37%;
       height: 463px;
-      @media(max-width: 992px){
+      @media(max-width: $bootstrap-md-width){
         height: 380px;
       }
       .heading{
         font-size: 3.5rem;
         font-weight: 500;
         font-family: Formal;
-        @media(min-width: 992px){
+        @media(min-width: $bootstrap-md-width){
           br{
             display:none;
           }
@@ -112,32 +112,32 @@
         .you{
           font-style: italic;
           display: inline-block;
-          @media(min-width: 992px){
+          @media(min-width: $bootstrap-md-width){
             width: 100%;
           }
         }
         .vip{
           font-weight: 700 !important;
           display: inline-block;
-          @media(min-width: 992px){
+          @media(min-width: $bootstrap-md-width){
             width: 100%;
           }
         }
         .deserve{
           display: inline-block;
-          @media(min-width: 992px){
+          @media(min-width: $bootstrap-md-width){
             width: 100%;
           }
-          @media(max-width: 992px){
+          @media(max-width: $bootstrap-md-width){
             margin-left: 10px;
           }
         }
         .treatment{
           display: inline-block;
-          @media(min-width: 992px){
+          @media(min-width: $bootstrap-md-width){
             width: 100%;
           }
-          @media(max-width: 992px){
+          @media(max-width: $bootstrap-md-width){
             margin-left: 10px;
           }
         }
@@ -159,11 +159,11 @@
         width: 18%;
         margin-top: 40px;
         margin-bottom: 40px;
-        @media(max-width: 992px){
+        @media(max-width: $bootstrap-md-width){
           width: 5rem;
         }
       }
-      @media(max-width: 992px){
+      @media(max-width: $bootstrap-md-width){
         width:100%;
       }
     }
@@ -172,7 +172,7 @@
       width: 63%;
       height: 463px;
       background-color: white;
-      @media(max-width: 992px){
+      @media(max-width: $bootstrap-md-width){
         height: 500px;
       }
       .mess{
@@ -186,7 +186,7 @@
           text-transform: none;
         }
         font-weight: 500;
-        @media(min-width: 992px){
+        @media(min-width: $bootstrap-md-width){
           br {
             display: none;
           }
@@ -210,7 +210,7 @@
           cursor: pointer;
         }
       }
-      @media(max-width: 992px){
+      @media(max-width: $bootstrap-md-width){
         width:100%;
       }
     }
