--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -13,6 +13,7 @@ $c-neutral-2: #F5F5F5;
 $c-neutral-4: #d7d7d7;
 $c-neutral-5: #e4e4e4;
 $c-neutral-6: #bcbcbc;
+$c-neutral-9: #5c5c5c;
 $c-neutral-10: #666;
 $c-neutral-12: #333;
 $c-neutral-13: #222;
