Move masterpass button

--- a/app/assets/stylesheets/redesign/_checkout.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout.css.scss
@@ -292,8 +292,9 @@ $order-summary-bg: #f7f7f9;
       margin-left: 20px;
     }
 
-
-
+    .shopping-bag-masterpass {
+      margin-top:20px;
+    }
 
     $order-summary-border-color: #cccccc;
     background-color: $gray-light-bg;
