--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -57,7 +57,7 @@ $product-color-hot-pink: #ff3399;
       .color-champagne               { background-color: #f0debb; }
       .color-charcoal                { background-color: #3c3c3c; }
       .color-chartreuse              { background-color: #bed405; }
-      .color-cheetah                 { background-image: url("product-collections/Cheetah.png"); }
+      .color-cheetah                 { @include image-color-selector('Cheetah.png'); }
       .color-cherry-red              { background-color: #ba0e0e; }
       .color-chocolate               { background-color: #5a2b0c; }
       .color-cobalt-blue             { background-color: #0000e5; }
@@ -130,12 +130,12 @@ $product-color-hot-pink: #ff3399;
       .color-pink-red                { @include split-color-selector(#ff3399, #dd0000); }
       .color-pink-and-blush          { @include split-color-selector(#f9d9e1, #ffabbc); }
       .color-plum                    { background-color: #8d4585; }
-      .color-polka-dot               { background-image: url("product-collections/Polka-dot.png"); }
+      .color-polka-dot               { @include image-color-selector('Polka-dot.png'); }
       .color-purple                  { background-color: #622b6f; }
       .color-purple-metal            { background-color: #776385; }
       .color-red                     { background-color: $product_color-red; }
       .color-red-and-white           { @include split-color-selector($product-color-red, #fffff0); }
-      .color-rosebud                 { background-image: url("product-collections/Rosebud.png"); }
+      .color-rosebud                 { @include image-color-selector('Rosebud.png'); }
       .color-rose-gold               { background-color: #d6aa85; }
       .color-royal-blue              { background-color: #3f34b2; }
       .color-royal-purple            { background-color: #77539c; }
