--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -60,6 +60,9 @@
             border: none !important;
             background-color: black;
             color: white;
+            @media(max-width: 375px){
+              font-size:1rem;
+            }
           }
         }
         .fb-form{
